# NYCU-CG-Final

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  build_err.txt  build_log_final.txt  cmake_install.cmake  node_names.txt  readme.md
assets/models/F1/: Untitled.blend
assets/models/F1/formula 1/: Formula_1_mesh.mtl
assets/models/F1_low/formula 1/: body.mtl
assets/models/car/: car.glb
assets/models/track_old/: road.mtl  track.mtl
assets/shaders/: bloom_final.frag  geometry.frag  geometry.vert  light.frag  light.vert  lighting_deferred.frag  rain.frag  rain.vert  shadow.frag  shadow.vert  skybox.frag  skybox.vert  smoke.frag  smoke.vert  solid.frag  solid.vert
include/: camera.h  context.h  gl_helper.h  program.h
report/: CG.md
report/PPT/: slide.html
src/: CMakeLists.txt  Makefile  camera.cpp  car.cpp  car.h  cmake_install.cmake  gl_helper.cpp  main.cpp  model.cpp  model.h
src/Programs/: GeometryProgram.cpp  MiniMapProgram.cpp  bloom.cpp  light.cpp  rain.cpp  shadow.cpp  skybox.cpp  smoke.cpp
